--- a/notebooks/epigame21-standard-30sec.ipynb
+++ b/notebooks/epigame21-standard-30sec.ipynb
@@ -81,7 +81,7 @@
     "\treturn list((pos_probs >= threshold).astype('int')) \n",
     "\n",
     "\n",
-    "def moving_thresh_auc(predictive_measure=[], outcome=[], moving_step=0.00001):\n",
+    "def moving_thresh_auc(predictive_measure=[], outcome=[], n_good=14, n_bad=7, moving_step=0.00001):\n",
     "    # returns AUC, best threshold, true negatives and true positives at the best threshold\n",
     "\n",
     "    thresholds = np.arange(0, np.max(predictive_measure), moving_step)\n",
@@ -95,8 +95,8 @@
     "    step = 0\n",
     "    for t in thresholds:    \n",
     "        g_l, b_l = to_labels(g, t), to_labels(b, t)\n",
-    "        tp = sum(g_l)/14 \n",
-    "        tn = b_l.count(0)/7\n",
+    "        tp = sum(g_l)/n_good \n",
+    "        tn = b_l.count(0)/n_bad\n",
     "        A = (tp + tn)/2\n",
     "        if A>A_top: \n",
     "            step=0\n",
@@ -150,9 +150,9 @@
     "\n",
     "        for strategy in strategies:\n",
     "\n",
-    "            ratio = data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"].fillna(0, inplace=True) \n",
-    "            auc = score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"]\n",
-    "\n",
+    "            ratio = float(data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"])\n",
+    "            auc = float(score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"])\n",
+    "            \n",
     "            max_0 = max(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(0)[\"Mean_overlap_ratio\"])\n",
     "            min_1 = min(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(1)[\"Mean_overlap_ratio\"])\n",
     "            if min_1 <= ratio <= max_0: ps_outcome = 2 # not defined\n",
@@ -201,13 +201,16 @@
     "    if sub in bad_subs: ps_outcome=0\n",
     "    elif sub in good_subs: ps_outcome=1\n",
     "\n",
-    "    data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "    try: \n",
+    "      data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "    \n",
+    "      pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
     "\n",
-    "    pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
-    "\n",
-    "    Subject.append(sub)\n",
-    "    Outcome.append(ps_outcome)\n",
-    "    Predictive_feature.append(pfeat_average)\n",
+    "      Subject.append(sub)\n",
+    "      Outcome.append(ps_outcome)\n",
+    "      Predictive_feature.append(pfeat_average)\n",
+    "      \n",
+    "    except: print(f\"Subject {sub} outcome prediction inaccurate\")\n",
     "\n",
     "epigame21_predictive_features_average = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"Predictive_feature\":Predictive_feature})\n",
     "epigame21_predictive_features_average.to_excel(main_folder+f\"epigame21_predictive_features_average.xlsx\")"
@@ -313,17 +316,16 @@
     "            elif sub in good_subs: ps_outcome=1\n",
     "\n",
     "            # consider only correct classifications\n",
-    "            data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\")\n",
-    "            for name, group in data_sub:\n",
-    "              if name==ps_outcome: \n",
-    "                data_sub = data_sub.get_group(ps_outcome)\n",
+    "            try:\n",
+    "              data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "              pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
     "\n",
-    "                pfeat_average = np.average(data_sub[\"Predictive_feature\"]); break\n",
+    "              Subject.append(sub)\n",
+    "              Outcome.append(ps_outcome)\n",
+    "              Predictive_feature.append(pfeat_average)\n",
+    "              Excluded.append(len(excluded_cm))\n",
     "\n",
-    "            Subject.append(sub)\n",
-    "            Outcome.append(ps_outcome)\n",
-    "            Excluded.append(len(excluded_cm))\n",
-    "            Predictive_feature.append(pfeat_average)\n",
+    "            except: print(f\"Subject {sub} outcome prediction inaccurate\")\n",
     "\n",
     "epigame21_predictive_features_average_pruning = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"Excluded\":Excluded, \"Predictive_feature\":Predictive_feature})\n",
     "epigame21_predictive_features_average_pruning.to_excel(main_folder+f\"epigame21_predictive_features_average_pruning_{get_strategy}.xlsx\")"
@@ -398,11 +400,11 @@
    "outputs": [],
    "source": [
     "plt.plot(distances)\n",
-    "plt.title(\"Strategy: MM\")\n",
+    "plt.title(f\"Strategy: {get_strategy.upper()}\")\n",
     "plt.ylabel(\"Distance between class distributions\")\n",
     "plt.xlabel(\"Pruned measures\")\n",
     "plt.show()\n",
-    "print(f\"Maximum distance / Best model: {distances.index(max(distances))}\")"
+    "print(f\"Maximum distance / Best model: {distances.index(max(distances))+1}\")"
    ]
   }
  ],
