--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -81,7 +81,7 @@
     "\treturn list((pos_probs >= threshold).astype('int')) \n",
     "\n",
     "\n",
-    "def moving_thresh_auc(predictive_measure=[], outcome=[], moving_step=0.00001):\n",
+    "def moving_thresh_auc(predictive_measure=[], outcome=[], n_good=14, n_bad=7, moving_step=0.00001):\n",
     "    # returns AUC, best threshold, true negatives and true positives at the best threshold\n",
     "\n",
     "    thresholds = np.arange(0, np.max(predictive_measure), moving_step)\n",
@@ -95,8 +95,8 @@
     "    step = 0\n",
     "    for t in thresholds:    \n",
     "        g_l, b_l = to_labels(g, t), to_labels(b, t)\n",
-    "        tp = sum(g_l)/14 \n",
-    "        tn = b_l.count(0)/7\n",
+    "        tp = sum(g_l)/n_good \n",
+    "        tn = b_l.count(0)/n_bad\n",
     "        A = (tp + tn)/2\n",
     "        if A>A_top: \n",
     "            step=0\n",
