--- a/notebooks/epigame21-standard-30sec.ipynb
+++ b/notebooks/epigame21-standard-30sec.ipynb
@@ -233,6 +233,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "!pip install statannot\n",
     "from statannot import add_stat_annotation\n",
     "\n",
     "from scipy.stats import shapiro\n",
@@ -244,7 +246,7 @@
     "x_plot, y_plot = list(data.Predictive_feature), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
     "# calculate moving threshold-based AUC\n",
-    "mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "mauc = moving_thresh_auc(x_plot, y_plot, n_good=y_plot.count(\"good\"), n_bad=y_plot.count(\"bad\"), moving_step=0.00001)\n",
     "\n",
     "gaussian, stest = False, ''\n",
     "stat, p = shapiro(x_plot)\n",
@@ -337,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epigame21_predictive_features_average_pruning = pd.read_excel(main_folder+f\"epigame21_predictive_features_average_pruning_mx.xlsx\", engine='openpyxl')"
+    "epigame21_predictive_features_average_pruning = pd.read_excel(main_folder+f\"epigame21_predictive_features_average_pruning_{get_strategy}.xlsx\", engine='openpyxl')"
    ]
   },
   {
@@ -362,7 +364,7 @@
     "    x_plot, y_plot = list(data.Predictive_feature), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
     "    # calculate moving threshold-based AUC\n",
-    "    mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "    mauc = moving_thresh_auc(x_plot, y_plot, n_good=y_plot.count(\"good\"), n_bad=y_plot.count(\"bad\"), moving_step=0.00001)\n",
     "\n",
     "    gaussian, stest = False, ''\n",
     "    stat, p = shapiro(x_plot)\n",
@@ -384,7 +386,7 @@
     "    if pvalue<=0.05:\n",
     "      print(stest)\n",
     "      print(distance)\n",
-    "      plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "      plt.title(f\"Sigmas = {sigmas}; Strategy = {get_strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
     "      plt.show()\n",
     "    plt.close('all')\n",
     "\n",
