--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -150,9 +150,9 @@
     "\n",
     "        for strategy in strategies:\n",
     "\n",
-    "            ratio = data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"].fillna(0, inplace=True) \n",
-    "            auc = score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"]\n",
-    "\n",
+    "            ratio = float(data_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"Mean_overlap_ratio\"])\n",
+    "            auc = float(score_sub_cm.groupby(\"Strategy\").get_group(strategy)[\"MAUC\"])\n",
+    "            \n",
     "            max_0 = max(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(0)[\"Mean_overlap_ratio\"])\n",
     "            min_1 = min(outcome_prediction_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy).groupby(\"Outcome\").get_group(1)[\"Mean_overlap_ratio\"])\n",
     "            if min_1 <= ratio <= max_0: ps_outcome = 2 # not defined\n",
@@ -160,7 +160,7 @@
     "            elif ratio < min_1: ps_outcome = 0\n",
     "\n",
     "            pfeat = ratio*auc\n",
-    "            print(pfeat)\n",
+    "            # print(pfeat)\n",
     "\n",
     "            Subject.append(sub)\n",
     "            Outcome.append(ps_outcome)\n",
@@ -230,6 +230,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "!pip install statannot\n",
     "from statannot import add_stat_annotation\n",
     "\n",
     "from scipy.stats import shapiro\n",
@@ -241,7 +243,7 @@
     "x_plot, y_plot = list(data.Predictive_feature), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
     "# calculate moving threshold-based AUC\n",
-    "mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "mauc = moving_thresh_auc(x_plot, y_plot, n_good=y_plot.count(\"good\"), n_bad=y_plot.count(\"bad\"), moving_step=0.00001)\n",
     "\n",
     "gaussian, stest = False, ''\n",
     "stat, p = shapiro(x_plot)\n",
@@ -335,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epigame21_predictive_features_average_pruning = pd.read_excel(main_folder+f\"epigame21_predictive_features_average_pruning_mx.xlsx\", engine='openpyxl')"
+    "epigame21_predictive_features_average_pruning = pd.read_excel(main_folder+f\"epigame21_predictive_features_average_pruning_{get_strategy}.xlsx\", engine='openpyxl')"
    ]
   },
   {
@@ -360,7 +362,7 @@
     "    x_plot, y_plot = list(data.Predictive_feature), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
     "\n",
     "    # calculate moving threshold-based AUC\n",
-    "    mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "    mauc = moving_thresh_auc(x_plot, y_plot, n_good=y_plot.count(\"good\"), n_bad=y_plot.count(\"bad\"), moving_step=0.00001)\n",
     "\n",
     "    gaussian, stest = False, ''\n",
     "    stat, p = shapiro(x_plot)\n",
@@ -382,7 +384,7 @@
     "    if pvalue<=0.05:\n",
     "      print(stest)\n",
     "      print(distance)\n",
-    "      plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "      plt.title(f\"Sigmas = {sigmas}; Strategy = {get_strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
     "      plt.show()\n",
     "    plt.close('all')\n",
     "\n",
@@ -398,11 +400,11 @@
    "outputs": [],
    "source": [
     "plt.plot(distances)\n",
-    "plt.title(\"Strategy: MM\")\n",
+    "plt.title(f\"Strategy: {get_strategy.upper()}\")\n",
     "plt.ylabel(\"Distance between class distributions\")\n",
     "plt.xlabel(\"Pruned measures\")\n",
     "plt.show()\n",
-    "print(f\"Maximum distance / Best model: {distances.index(max(distances))}\")"
+    "print(f\"Maximum distance / Best model: {distances.index(max(distances))+1}\")"
    ]
   }
  ],
