--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -283,6 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# @title Default title text\n",
     "epigame21_predictive_features = pd.read_excel(main_folder+f\"epigame21_predictive_features.xlsx\", engine='openpyxl').groupby(\"Strategy\").get_group(get_strategy)\n",
     "outcome_prediction_score.sort_values(\"MAUC\")\n",
     "\n",
@@ -295,7 +296,7 @@
     "ps_outcome = 1\n",
     "\n",
     "excluded_cm = []\n",
-    "\n",
+    "excluded_subs_list = []\n",
     "for index, row in outcome_prediction_score.iterrows():\n",
     "    cm, strategy = row['CM'], row['Strategy']\n",
     "    if strategy==get_strategy and cm!=\"PEC\":\n",
@@ -308,6 +309,7 @@
     "      excluded_cm.append(cm)\n",
     "\n",
     "      if len(excluded_cm)<31:\n",
+    "        excluded_subs = 0\n",
     "        for sub in subs:\n",
     "            pfeat_average = 0\n",
     "            \n",
@@ -315,17 +317,20 @@
     "            elif sub in good_subs: ps_outcome=1\n",
     "\n",
     "            # consider only correct classifications\n",
-    "            data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\")\n",
-    "            for name, group in data_sub:\n",
-    "              if name==ps_outcome: \n",
-    "                data_sub = data_sub.get_group(ps_outcome)\n",
+    "            try:\n",
+    "              data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "              pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
     "\n",
-    "                pfeat_average = np.average(data_sub[\"Predictive_feature\"]); break\n",
+    "              Subject.append(sub)\n",
+    "              Outcome.append(ps_outcome)\n",
+    "              Predictive_feature.append(pfeat_average)\n",
+    "              Excluded.append(len(excluded_cm))\n",
     "\n",
-    "            Subject.append(sub)\n",
-    "            Outcome.append(ps_outcome)\n",
-    "            Excluded.append(len(excluded_cm))\n",
-    "            Predictive_feature.append(pfeat_average)\n",
+    "            except: \n",
+    "              print(f\"Subject {sub} outcome prediction inaccurate\")\n",
+    "              excluded_subs += 1\n",
+    "              \n",
+    "        excluded_subs_list.append(excluded_subs)\n",
     "\n",
     "epigame21_predictive_features_average_pruning = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"Excluded\":Excluded, \"Predictive_feature\":Predictive_feature})\n",
     "epigame21_predictive_features_average_pruning.to_excel(main_folder+f\"epigame21_predictive_features_average_pruning_{get_strategy}.xlsx\")"
@@ -399,7 +404,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(distances)\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(distances, label=\"Distance between classes\", color='red')\n",
+    "ax.tick_params(axis='y', labelcolor='red')\n",
+    "\n",
+    "# Generate a new Axes instance, on the twin-X axes (same position)\n",
+    "ax2 = ax.twinx()\n",
+    "\n",
+    "ax2.plot(excluded_subs_list, label=\"Excluded subjects\", color='green')\n",
+    "ax2.tick_params(axis='y', labelcolor='green')\n",
+    "\n",
+    "plt.legend()\n",
     "plt.title(f\"Strategy: {get_strategy.upper()}\")\n",
     "plt.ylabel(\"Distance between class distributions\")\n",
     "plt.xlabel(\"Pruned measures\")\n",
