--- a/notebooks/plot_top_pred.ipynb
+++ b/notebooks/plot_top_pred.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the top AUC scores and visualize the mean overlap value distributions per outcome using boxplots. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
