--- a/notebooks/epigame21-standard-30sec.ipynb
+++ b/notebooks/epigame21-standard-30sec.ipynb
@@ -57,16 +57,14 @@
    "source": [
     "# from google.colab import drive\n",
     "# drive.mount('/content/gdrive')\n",
-    "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
+    "# main_folder = \"/content/gdrive/My Drive/epigame-folder/30sec/\"\n",
     "\n",
-    "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
+    "main_folder = \"/home/kivi/gdrive/epigame-folder/30sec/\"\n",
     "\n",
     "path_res = main_folder + \"cvs_pairs/\"\n",
     "\n",
     "path_deck = main_folder + \"decks/\"\n",
-    "path_scores = main_folder + \"game_scores/\"\n",
-    "\n",
-    "woi = \"preseizure1\""
+    "path_scores = main_folder + \"game_scores/\"\n"
    ]
   },
   {
@@ -267,7 +265,7 @@
     "pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
     "if pvalue<=0.05:\n",
     "    print(stest)\n",
-    "    plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "    plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL;\\np-value = {pvalue:.2e}; AUC = {mauc[0]:0.2f}\", pad=50)\n",
     "    plt.show()\n"
    ]
   },
@@ -392,7 +390,7 @@
     "    if pvalue<=0.05:\n",
     "      print(stest)\n",
     "      print(distance)\n",
-    "      plt.title(f\"Sigmas = {sigmas}; Strategy = {get_strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "      plt.title(f\"Sigmas = {sigmas}; Strategy = {get_strategy};\\np-value = {pvalue:.2e}; AUC = {mauc[0]:0.2f}\", pad=50)\n",
     "      plt.show()\n",
     "    plt.close('all')\n",
     "\n",
@@ -412,15 +410,19 @@
     "ax.plot(distances, label=\"Distance between classes\", color='red')\n",
     "ax.tick_params(axis='y', labelcolor='red')\n",
     "\n",
+    "# plt.legend()\n",
+    "plt.ylabel(\"Distance between class distributions\")\n",
+    "plt.xlabel(\"Pruned measures\")\n",
     "# Generate a new Axes instance, on the twin-X axes (same position)\n",
     "ax2 = ax.twinx()\n",
     "\n",
     "ax2.plot(excluded_subs_list, label=\"Excluded subjects\", color='green')\n",
     "ax2.tick_params(axis='y', labelcolor='green')\n",
     "\n",
-    "plt.legend()\n",
+    "# plt.legend()\n",
     "plt.title(f\"Strategy: {get_strategy.upper()}\")\n",
-    "plt.ylabel(\"Distance between class distributions\")\n",
+    "plt.ylabel(\"Number of excluded subjects\")\n",
+    "plt.xticks([x for x in range(0,31,2)], [x for x in range(1,32,2)])\n",
     "plt.xlabel(\"Pruned measures\")\n",
     "plt.show()\n",
     "print(f\"Maximum distance / Best model: {distances.index(max(distances))+1}\")"
