--- a/notebooks/epigame21-standard.ipynb
+++ b/notebooks/epigame21-standard.ipynb
@@ -138,8 +138,7 @@
     "    data_sub = outcome_prediction_data.groupby(\"Subject\").get_group(sub)\n",
     "    score_sub = outcome_prediction_score.groupby(\"Sigmas\").get_group(sigmas)\n",
     "\n",
-    "    print(\"\\nSubject:\")\n",
-    "    print(sub)\n",
+    "    print(\"\\nSubject:\", sub)\n",
     "\n",
     "    strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -201,10 +200,17 @@
     "    if sub in bad_subs: ps_outcome=0\n",
     "    elif sub in good_subs: ps_outcome=1\n",
     "\n",
-    "    data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "    try:\n",
+    "        data_sub = epigame21_predictive_features.groupby(\"Subject\").get_group(sub).groupby(\"Outcome\").get_group(ps_outcome)\n",
+    "        pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
     "\n",
-    "    pfeat_average = np.average(data_sub[\"Predictive_feature\"])\n",
+    "        Subject.append(sub)\n",
+    "        Outcome.append(ps_outcome)\n",
+    "        Predictive_feature.append(pfeat_average)\n",
     "\n",
+    "    except: \n",
+    "        print(f\"Subject {sub} outcome prediction inaccurate\")\n",
+    "        \n",
     "    Subject.append(sub)\n",
     "    Outcome.append(ps_outcome)\n",
     "    Predictive_feature.append(pfeat_average)\n",
@@ -264,7 +270,7 @@
     "pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
     "if pvalue<=0.05:\n",
     "    print(stest)\n",
-    "    plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "    plt.title(f\"Sigmas = {sigmas}; Measure = ALL; Strategy = ALL;\\np-value = {pvalue:.2e}; AUC = {mauc[0]:0.2f}\", pad=50)\n",
     "    plt.show()\n"
    ]
   },
@@ -389,7 +395,7 @@
     "    if pvalue<=0.05:\n",
     "      print(stest)\n",
     "      print(distance)\n",
-    "      plt.title(f\"Sigmas = {sigmas}; Strategy = {get_strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "      plt.title(f\"Sigmas = {sigmas}; Strategy = {get_strategy};\\np-value = {pvalue:.2e}; AUC = {mauc[0]:0.2f}\", pad=50)\n",
     "      plt.show()\n",
     "    plt.close('all')\n",
     "\n",
@@ -409,15 +415,19 @@
     "ax.plot(distances, label=\"Distance between classes\", color='red')\n",
     "ax.tick_params(axis='y', labelcolor='red')\n",
     "\n",
+    "# plt.legend()\n",
+    "plt.ylabel(\"Distance between class distributions\")\n",
+    "plt.xlabel(\"Pruned measures\")\n",
     "# Generate a new Axes instance, on the twin-X axes (same position)\n",
     "ax2 = ax.twinx()\n",
     "\n",
     "ax2.plot(excluded_subs_list, label=\"Excluded subjects\", color='green')\n",
     "ax2.tick_params(axis='y', labelcolor='green')\n",
     "\n",
-    "plt.legend()\n",
+    "# plt.legend()\n",
     "plt.title(f\"Strategy: {get_strategy.upper()}\")\n",
-    "plt.ylabel(\"Distance between class distributions\")\n",
+    "plt.ylabel(\"Number of excluded subjects\")\n",
+    "plt.xticks([x for x in range(0,31,2)], [x for x in range(1,32,2)])\n",
     "plt.xlabel(\"Pruned measures\")\n",
     "plt.show()\n",
     "print(f\"Maximum distance / Best model: {distances.index(max(distances))+1}\")"
