--- a/notebooks/Schelling_Model_Game.ipynb
+++ b/notebooks/Schelling_Model_Game.ipynb
@@ -683,10 +683,10 @@
       },
       "outputs": [],
       "source": [
+        "from networkx.algorithms.assortativity import connectivity\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.colors as mcolors\n",
-        "from scipy.signal import convolve2d\n",
         "from scipy.optimize import minimize\n",
         "\n",
         "class SchellingModel:\n",
@@ -696,7 +696,8 @@
         "        self.max_iterations = max_iterations\n",
         "        self.strategist_population_percentage = strategist_population_percentage\n",
         "\n",
-        "        self.grid = np.zeros((grid_size, grid_size))\n",
+        "        self.grid = np.zeros((self.grid_size, self.grid_size))\n",
+        "        self.grid[self.grid == 0] = 3\n",
         "        self.agent_positions = []\n",
         "\n",
         "        self.kernel = np.array([[1, 1, 1],\n",
@@ -704,7 +705,7 @@
         "                                [1, 1, 1]], dtype=np.int8)\n",
         "\n",
         "    def initialize_agents(self, num_agents):\n",
-        "        vacant_spots = [(i, j) for i in range(self.grid_size) for j in range(self.grid_size)]\n",
+        "        vacant_spots = [(i, j) for i in range(self.grid_size) for j in range(self.grid_size) if self.grid[i, j] == 3]\n",
         "        np.random.shuffle(vacant_spots)\n",
         "\n",
         "        num_strategists = int(num_agents * self.strategist_population_percentage)\n",
@@ -720,98 +721,124 @@
         "            self.grid[position[0], position[1]] = 2\n",
         "            self.agent_positions.append(position)\n",
         "\n",
-        "    def calculate_similarity(self, agent_position):\n",
-        "        x, y = agent_position\n",
-        "        agent_type = self.grid[x, y]\n",
-        "        similar_neighbors = 0\n",
-        "        total_neighbors = 0\n",
+        "        plt.figure(figsize=(4,4))\n",
+        "        cmap = mcolors.ListedColormap(['red', 'grey', 'white'])\n",
+        "        col_bounds = [1, 2, 3, 4]\n",
+        "        norm = mcolors.BoundaryNorm(col_bounds, cmap.N)\n",
+        "        plt.imshow(self.grid, cmap=cmap, norm=norm)\n",
+        "        plt.show()\n",
+        "        plt.close()\n",
         "\n",
-        "        for i in range(max(0, x - 1), min(self.grid_size, x + 2)):\n",
-        "            for j in range(max(0, y - 1), min(self.grid_size, y + 2)):\n",
-        "                if self.grid[i, j] != 0:\n",
-        "                    total_neighbors += 1\n",
-        "                    if self.grid[i, j] == agent_type:\n",
-        "                        similar_neighbors += 1\n",
-        "\n",
-        "        return similar_neighbors / total_neighbors if total_neighbors > 0 else 0\n",
-        "\n",
-        "    def calculate_connectivity_change(self, agent_position, new_position):\n",
-        "        similarity_before = self.calculate_similarity(agent_position)\n",
-        "        similarity_after = self.calculate_similarity(new_position)\n",
-        "        return similarity_after - similarity_before\n",
-        "\n",
-        "    # def cost_function(self, new_position, agent_position):\n",
-        "    #     return -self.calculate_connectivity_change((int(agent_position[0]),int(agent_position[1])), (int(new_position[0]),int(new_position[1])))\n",
-        "\n",
-        "    def calculate_difference_kernel(self, old_neighborhood, new_neighborhood):\n",
-        "        difference_kernel = np.abs(convolve2d(old_neighborhood, self.kernel, mode='same') -\n",
-        "                                   convolve2d(new_neighborhood, self.kernel, mode='same'))\n",
-        "        return difference_kernel\n",
-        "\n",
-        "    def get_wrapped_indices(self, idx):\n",
+        "    def get_wrapped_idx(self, idx):\n",
         "        return idx % self.grid_size\n",
         "\n",
-        "    def cost_function(self, new_position, agent_position):\n",
-        "        old_neighborhood_indices = [\n",
-        "            (self.get_wrapped_indices(agent_position[0] - 1), self.get_wrapped_indices(agent_position[1] - 1)),\n",
-        "            (self.get_wrapped_indices(agent_position[0] - 1), self.get_wrapped_indices(agent_position[1])),\n",
-        "            (self.get_wrapped_indices(agent_position[0] - 1), self.get_wrapped_indices(agent_position[1] + 1)),\n",
-        "            (self.get_wrapped_indices(agent_position[0]), self.get_wrapped_indices(agent_position[1] - 1)),\n",
+        "    def wrapped_neighborhood(self, agent_position):\n",
+        "        x, y = agent_position\n",
+        "        neighborhood_indices = [\n",
+        "            (self.get_wrapped_idx(x - 1), self.get_wrapped_idx(y - 1)),\n",
+        "            (self.get_wrapped_idx(x - 1), self.get_wrapped_idx(y)),\n",
+        "            (self.get_wrapped_idx(x - 1), self.get_wrapped_idx(y + 1)),\n",
+        "            (self.get_wrapped_idx(x), self.get_wrapped_idx(y - 1)),\n",
         "            agent_position,\n",
-        "            (self.get_wrapped_indices(agent_position[0]), self.get_wrapped_indices(agent_position[1] + 1)),\n",
-        "            (self.get_wrapped_indices(agent_position[0] + 1), self.get_wrapped_indices(agent_position[1] - 1)),\n",
-        "            (self.get_wrapped_indices(agent_position[0] + 1), self.get_wrapped_indices(agent_position[1])),\n",
-        "            (self.get_wrapped_indices(agent_position[0] + 1), self.get_wrapped_indices(agent_position[1] + 1))\n",
+        "            (self.get_wrapped_idx(x), self.get_wrapped_idx(y + 1)),\n",
+        "            (self.get_wrapped_idx(x + 1), self.get_wrapped_idx(y - 1)),\n",
+        "            (self.get_wrapped_idx(x + 1), self.get_wrapped_idx(y)),\n",
+        "            (self.get_wrapped_idx(x + 1), self.get_wrapped_idx(y + 1))\n",
         "        ]\n",
         "\n",
-        "        new_position_indices = [\n",
-        "            (self.get_wrapped_indices(new_position[0] - 1), self.get_wrapped_indices(new_position[1] - 1)),\n",
-        "            (self.get_wrapped_indices(new_position[0] - 1), self.get_wrapped_indices(new_position[1])),\n",
-        "            (self.get_wrapped_indices(new_position[0] - 1), self.get_wrapped_indices(new_position[1] + 1)),\n",
-        "            (self.get_wrapped_indices(new_position[0]), self.get_wrapped_indices(new_position[1] - 1)),\n",
-        "            new_position,\n",
-        "            (self.get_wrapped_indices(new_position[0]), self.get_wrapped_indices(new_position[1] + 1)),\n",
-        "            (self.get_wrapped_indices(new_position[0] + 1), self.get_wrapped_indices(new_position[1] - 1)),\n",
-        "            (self.get_wrapped_indices(new_position[0] + 1), self.get_wrapped_indices(new_position[1])),\n",
-        "            (self.get_wrapped_indices(new_position[0] + 1), self.get_wrapped_indices(new_position[1] + 1))\n",
-        "        ]\n",
+        "        return neighborhood_indices\n",
+        "\n",
+        "    def calculate_similarity(self, agent_position):\n",
+        "\n",
+        "        neighborhood_indices = self.wrapped_neighborhood(agent_position)\n",
+        "\n",
+        "        neighborhood = self.grid[[int(i) for i, j in neighborhood_indices],\n",
+        "                                 [int(j) for i, j in neighborhood_indices]].reshape(3, 3)\n",
+        "\n",
+        "        same_neigh = (neighborhood == 2)*self.kernel\n",
+        "        total_neigh = (neighborhood != 3)*self.kernel\n",
+        "        similarity_ratio = same_neigh.sum() / total_neigh.sum() if total_neigh.sum()>0 else 0\n",
+        "\n",
+        "        return similarity_ratio\n",
+        "\n",
+        "    def cost_function(self, new_position, agent_position):\n",
+        "\n",
+        "        old_neighborhood_indices = self.wrapped_neighborhood(agent_position)\n",
+        "        new_neighborhood_indices = self.wrapped_neighborhood(new_position)\n",
         "\n",
         "        old_neighborhood = self.grid[[int(i) for i, j in old_neighborhood_indices],\n",
         "                                     [int(j) for i, j in old_neighborhood_indices]].reshape(3, 3)\n",
-        "        new_neighborhood = self.grid[[int(i) for i, j in new_position_indices],\n",
-        "                                     [int(j) for i, j in new_position_indices]].reshape(3, 3)\n",
+        "        new_neighborhood = self.grid[[int(i) for i, j in new_neighborhood_indices],\n",
+        "                                     [int(j) for i, j in new_neighborhood_indices]].reshape(3, 3)\n",
         "\n",
-        "        difference_kernel = self.calculate_difference_kernel(old_neighborhood, new_neighborhood)\n",
-        "        average_difference = np.mean(difference_kernel)\n",
+        "        diff_strat = np.abs(((old_neighborhood == 1)*self.kernel).sum() - ((new_neighborhood == 1)*self.kernel).sum())\n",
+        "        diff_nonstrat = np.abs(((old_neighborhood == 2)*self.kernel).sum() - ((new_neighborhood == 2)*self.kernel).sum())\n",
+        "        diff_vacant = np.abs(((old_neighborhood == 3)*self.kernel).sum() - ((new_neighborhood == 3)*self.kernel).sum())\n",
         "\n",
-        "        return -average_difference\n",
+        "        connectivity_difference = diff_strat + diff_nonstrat + diff_vacant\n",
+        "\n",
+        "        return - (connectivity_difference)\n",
         "\n",
         "    def run_simulation(self):\n",
         "        plt.figure(figsize=(4,4))\n",
-        "        cmap = mcolors.ListedColormap(['white', 'blue', 'red'])\n",
-        "        bounds = [0, 1, 2, 3]\n",
-        "        norm = mcolors.BoundaryNorm(bounds, cmap.N)\n",
+        "        cmap = mcolors.ListedColormap(['red', 'grey', 'white'])\n",
+        "        col_bounds = [1, 2, 3, 4]\n",
+        "        norm = mcolors.BoundaryNorm(col_bounds, cmap.N)\n",
+        "\n",
+        "        new_agent_positions = {}\n",
         "\n",
         "        for iteration in range(self.max_iterations):\n",
         "            print(f\"Iteration {iteration + 1}\")\n",
         "\n",
         "            np.random.shuffle(self.agent_positions)\n",
         "\n",
+        "            new_agent_positions = set()\n",
+        "            vacant_spots = {(i, j) for i in range(self.grid_size) for j in range(self.grid_size) if self.grid[i, j] == 3}\n",
+        "\n",
         "            for agent_position in self.agent_positions:\n",
-        "                if self.grid[agent_position[0], agent_position[1]] == 1:  # Only for strategists\n",
-        "                    vacant_spots = [(i, j) for i in range(self.grid_size) for j in range(self.grid_size) if self.grid[i, j] == 0]\n",
-        "                    if vacant_spots:\n",
-        "                        result = minimize(\n",
-        "                            self.cost_function,\n",
-        "                            x0=vacant_spots[np.random.randint(len(vacant_spots))],\n",
-        "                            args=(agent_position,),\n",
-        "                            bounds=[(0, self.grid_size-1), (0, self.grid_size-1)]\n",
-        "                        )\n",
-        "                        new_position = tuple(map(int, result.x))\n",
-        "                        self.grid[new_position[0], new_position[1]] = 1\n",
-        "                        self.grid[agent_position[0], agent_position[1]] = 0\n",
-        "                        self.agent_positions.remove(agent_position)\n",
-        "                        self.agent_positions.append(new_position)\n",
+        "              \n",
+        "                vacant_spots = {(i, j) for i in range(self.grid_size) for j in range(self.grid_size) if self.grid[i, j] == 3}\n",
+        "                if agent_position not in vacant_spots:\n",
+        "\n",
+        "                  new_agent_positions.add(agent_position)\n",
+        "\n",
+        "                  if self.grid[agent_position[0], agent_position[1]] == 1:  # Strategists\n",
+        "\n",
+        "                      result = minimize(\n",
+        "                          self.cost_function,\n",
+        "                          x0=list(vacant_spots)[np.random.choice(len(vacant_spots))],\n",
+        "                          args=(agent_position,),\n",
+        "                          bounds=[(0, self.grid_size), (0, self.grid_size)]\n",
+        "                      )\n",
+        "                      new_position = tuple(map(int, result.x))\n",
+        "                      self.grid[new_position[0], new_position[1]] = 1     # move strategist to new position\n",
+        "                      self.grid[agent_position[0], agent_position[1]] = 3 # vacate the old position\n",
+        "\n",
+        "                      new_agent_positions.add(new_position)\n",
+        "                      new_agent_positions.remove(agent_position)\n",
+        "\n",
+        "                      vacant_spots.add(agent_position)\n",
+        "                      vacant_spots.remove(new_position)\n",
+        "\n",
+        "\n",
+        "                  elif self.grid[agent_position[0], agent_position[1]] == 2: # Non-strategists\n",
+        "\n",
+        "                      similarity = self.calculate_similarity(agent_position)\n",
+        "\n",
+        "                      if similarity < self.similarity_threshold:\n",
+        "                        print(similarity, \"<\", self.similarity_threshold, agent_position)\n",
+        "\n",
+        "                        new_position = list(vacant_spots)[np.random.choice(len(vacant_spots))]\n",
+        "                        self.grid[new_position[0], new_position[1]] = 2       # move non-strategist to new position\n",
+        "                        self.grid[agent_position[0], agent_position[1]] = 3   # vacate old position\n",
+        "\n",
+        "                        new_agent_positions.add(new_position)\n",
+        "                        new_agent_positions.remove(agent_position)\n",
+        "\n",
+        "                        vacant_spots.add(agent_position)\n",
+        "                        vacant_spots.remove(new_position)\n",
+        "\n",
+        "            self.agent_positions = list(new_agent_positions)\n",
         "\n",
         "            plt.imshow(self.grid, cmap=cmap, norm=norm)\n",
         "            plt.title(f\"Iteration {iteration + 1}\")\n",
@@ -819,13 +846,13 @@
         "\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    grid_size = 15\n",
-        "    similarity_threshold = 0.3\n",
-        "    max_iterations = 50\n",
-        "    strategist_population_percentage = 0.1\n",
+        "    grid_size = 10\n",
+        "    similarity_threshold = 0.5\n",
+        "    max_iterations = 200\n",
+        "    strategist_population_percentage = 0.2\n",
         "\n",
         "    model = SchellingModel(grid_size, similarity_threshold, max_iterations, strategist_population_percentage)\n",
-        "    model.initialize_agents(num_agents=100)\n",
+        "    model.initialize_agents(num_agents=50)\n",
         "    model.run_simulation()"
       ]
     }
