--- a/notebooks/epigame21-standard-30sec.ipynb
+++ b/notebooks/epigame21-standard-30sec.ipynb
@@ -158,7 +158,7 @@
     "            elif ratio < min_1: ps_outcome = 0\n",
     "\n",
     "            pfeat = ratio*auc\n",
-    "            print(pfeat)\n",
+    "            # print(pfeat)\n",
     "\n",
     "            Subject.append(sub)\n",
     "            Outcome.append(ps_outcome)\n",
