--- a/notebooks/node0-1_connectivity_change_CVS.ipynb
+++ b/notebooks/node0-1_connectivity_change_CVS.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This notebook is to analyze the connectivity change (CVSs) of EN nodes. We separately analyze EN-EN and EN-NN connections to see which type of connections changes more during preseizure. We hypothesize that EN-NN connections present higher changes in connectivity, as previous studies imply the regulatory influence of the \"regulatory network\" on the EN. This would also go in favour of the competition model. "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 80,
       "metadata": {
@@ -33,10 +40,14 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')\n",
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/gdrive')\n",
+        "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
         "\n",
-        "main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
+        "woi = \"preseizure1\"\n",
+        "measure = 'PLI-(0,4)'\n",
+        "\n",
+        "main_folder = \"/media/kivi/ADATA HV100/epigame-folder/\"\n",
         "\n",
         "df = pd.read_csv(main_folder + \"cvs_pairs_preseizure1.csv\")\n",
         "df.columns\n",
@@ -76,7 +87,7 @@
       },
       "outputs": [],
       "source": [
-        "df = df[df['CM'] == 'PLI-(0,4)']"
+        "df = df[df['CM'] == measure]"
       ]
     },
     {
@@ -253,7 +264,7 @@
         "id": "rvJ4Tr3v6p-a"
       },
       "source": [
-        "Randomly sample 10% of resection node and the same number of non-resection node, and then calculate the average CVS for the conditions condition_00 and condition_01."
+        "Randomly sample 10% of resection nodes and the same number of non-resection node, and then calculate the average CVS for the conditions condition_00 and condition_01."
       ]
     },
     {
@@ -430,8 +441,6 @@
         }
       ],
       "source": [
-        "import itertools\n",
-        "import numpy as np\n",
         "from scipy import stats\n",
         "\n",
         "for sub in good_outcome_subjects[::-1]:\n",
