--- a/notebooks/connection_type_comparison.ipynb
+++ b/notebooks/connection_type_comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Subject', 'Pair', 'Labels', 'CM', 'CVS'], dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_beta = pd.read_csv(main_folder + \"cvs_pairs_preseizure1.csv\")\n",
     "df_gamma = pd.read_csv(main_folder + \"cvs_pairs_preseizure1_gamma.csv\")\n",
@@ -45,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PAC', 'PEC', 'SCR-(0,4)', 'SCI-(0,4)', 'PLV-(0,4)', 'PLI-(0,4)', 'CC-(0,4)', 'SCR-(4,8)', 'SCI-(4,8)', 'PLV-(4,8)', 'PLI-(4,8)', 'CC-(4,8)', 'SCR-(8,13)', 'SCI-(8,13)', 'PLV-(8,13)', 'PLI-(8,13)', 'CC-(8,13)', 'SCR-(13,30)', 'SCI-(13,30)', 'PLV-(13,30)', 'PLI-(13,30)', 'CC-(13,30)', 'SCR-(30,70)', 'SCI-(30,70)', 'PLV-(30,70)', 'PLI-(30,70)', 'CC-(30,70)', 'SCR-(70,150)', 'SCI-(70,150)', 'PLV-(70,150)', 'PLI-(70,150)', 'CC-(70,150)']\n"
+     ]
+    }
+   ],
    "source": [
     "connectivity_measures = list(df['CM'].unique())\n",
     "print(connectivity_measures)"
@@ -55,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,9 +151,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CC-(0,4)\n",
+      "Subject: 1\n",
+      "9 True\n",
+      "8803\n",
+      "8920\n",
+      "9000\n",
+      "1 1 1 1\n",
+      "Subject: 2\n",
+      "4 True\n",
+      "7200\n",
+      "7200\n",
+      "7200\n",
+      "2 2 2 2\n",
+      "Subject: 3\n",
+      "13 True\n",
+      "6500\n",
+      "6500\n",
+      "6500\n",
+      "3 3 3 3\n",
+      "Subject: 4\n",
+      "11 True\n",
+      "29700\n",
+      "29700\n",
+      "29700\n",
+      "4 4 4 4\n",
+      "Subject: 5\n",
+      "6 True\n",
+      "1200\n",
+      "1200\n",
+      "1200\n",
+      "5 5 5 5\n",
+      "Subject: 6\n",
+      "3 False\n",
+      "300\n",
+      "300\n",
+      "300\n",
+      "6 6 6 6\n",
+      "Subject: 7\n",
+      "9 True\n",
+      "54900\n",
+      "54900\n",
+      "54900\n",
+      "7 7 7 7\n",
+      "Subject: 8\n",
+      "10 True\n",
+      "12000\n",
+      "12000\n",
+      "12000\n",
+      "8 8 8 8\n",
+      "Subject: 9\n",
+      "4 True\n",
+      "4400\n",
+      "4400\n",
+      "4400\n",
+      "9 9 9 9\n",
+      "Subject: 10\n",
+      "9 True\n",
+      "5400\n",
+      "5400\n",
+      "5400\n",
+      "10 10 10 10\n",
+      "Subject: 11\n",
+      "8 True\n",
+      "10400\n",
+      "10400\n",
+      "10400\n",
+      "11 11 11 11\n",
+      "Subject: 12\n",
+      "1 False\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "12 12 12 12\n",
+      "Subject: 13\n",
+      "8 True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kivi/miniconda3/envs/xnn/lib/python3.9/site-packages/numpy/core/fromnumeric.py:3464: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/home/kivi/miniconda3/envs/xnn/lib/python3.9/site-packages/numpy/core/_methods.py:192: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/home/kivi/miniconda3/envs/xnn/lib/python3.9/site-packages/numpy/core/_methods.py:269: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "/home/kivi/miniconda3/envs/xnn/lib/python3.9/site-packages/numpy/core/_methods.py:226: RuntimeWarning: invalid value encountered in divide\n",
+      "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
+      "/home/kivi/miniconda3/envs/xnn/lib/python3.9/site-packages/numpy/core/_methods.py:261: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24000\n",
+      "24000\n",
+      "24000\n",
+      "13 13 13 13\n",
+      "Subject: 14\n",
+      "4 False\n",
+      "400\n",
+      "400\n",
+      "400\n",
+      "14 14 14 14\n",
+      "Subject: 15\n",
+      "9 True\n",
+      "900\n",
+      "900\n",
+      "900\n",
+      "15 15 15 15\n",
+      "Subject: 16\n",
+      "9 True\n",
+      "3600\n",
+      "3600\n",
+      "3600\n",
+      "16 16 16 16\n",
+      "Subject: 17\n",
+      "11 True\n",
+      "19800\n",
+      "19800\n",
+      "19800\n",
+      "17 17 17 17\n",
+      "Subject: 18\n",
+      "16 True\n",
+      "62012\n",
+      "63080\n",
+      "64000\n",
+      "18 18 18 18\n",
+      "Subject: 19\n",
+      "5 True\n",
+      "8500\n",
+      "8500\n",
+      "8500\n",
+      "19 19 19 19\n",
+      "Subject: 20\n",
+      "6 False\n",
+      "600\n",
+      "600\n",
+      "600\n",
+      "20 20 20 20\n",
+      "Subject: 21\n",
+      "9 True\n"
+     ]
+    }
+   ],
    "source": [
     "print(measure)\n",
     "\n",
@@ -156,7 +327,7 @@
     "\n",
     "    cvs_condition_10, cvs_condition_11, cvs_condition_00 = [],[],[]\n",
     "\n",
-    "    for i in range(10):\n",
+    "    for i in range(100):\n",
     "\n",
     "        resection_labels = list(np.random.choice(RESECTION[sub], size=group_size, replace=False))\n",
     "        non_resection_labels = list(np.random.choice(list(set(NODES[str(sub)])-set(RESECTION[sub])), size=group_size, replace=False))\n",
@@ -190,10 +361,6 @@
     "            cvs_condition_11 += list(relevant_rows[condition_11]['CVS'].apply(lambda x: np.mean(list(map(float, x.strip('[]').split())))))\n",
     "            cvs_condition_00 += list(relevant_rows[condition_00]['CVS'].apply(lambda x: np.mean(list(map(float, x.strip('[]').split())))))\n",
     "\n",
-    "    scores_10.append(sum(cvs_condition_10))\n",
-    "    scores_11.append(sum(cvs_condition_11))\n",
-    "    scores_00.append(sum(cvs_condition_00))\n",
-    "\n",
     "    print(len(cvs_condition_00))\n",
     "    print(len(cvs_condition_10))\n",
     "    print(len(cvs_condition_11))\n",
@@ -212,7 +379,7 @@
     "    std_condition_00 = np.std(cvs_condition_00)\n",
     "\n",
     "    # Calculate thresholds based on sigma\n",
-    "    thresholds = [1, 2, 3]\n",
+    "    thresholds = [1]\n",
     "    # Calculate thresholded average CVS values for condition_10\n",
     "    thresholded_cvs_condition_10 = {\n",
     "        threshold: [val for val in cvs_condition_10 if val > mean_condition_10 + std_condition_10 * threshold]\n",
@@ -232,43 +399,9 @@
     "    fig, axs = plt.subplots(1, len(thresholds) + 1, figsize=(15, 6))\n",
     "\n",
     "    for idx, threshold in enumerate(thresholds):\n",
-    "        axs[idx].boxplot([thresholded_cvs_condition_10[threshold], thresholded_cvs_condition_11[threshold], thresholded_cvs_condition_00[threshold]], labels=['1-0', '1-1', '0-0'])\n",
-    "        axs[idx].set_title(f\"CVS > mean+{threshold}σ\")\n",
-    "        axs[idx].set_ylabel('CVS')\n",
-    "\n",
-    "    # Add a subplot for distributions\n",
-    "    axs[-1].hist(cvs_condition_11, bins=10, alpha=0.3, label='1-1', color=\"red\")\n",
-    "    axs[-1].hist(cvs_condition_10, bins=10, alpha=0.3, label='1-0', color=\"blue\")\n",
-    "    axs[-1].hist(cvs_condition_00, bins=10, alpha=0.3, label='0-0', color=\"grey\")\n",
-    "\n",
-    "    axs[-1].axvline(x=mean_condition_11, color='red', linestyle='-', label='1-1 mean')\n",
-    "    axs[-1].axvline(x=mean_condition_10, color='blue', linestyle='-', label='1-0 mean')\n",
-    "    axs[-1].axvline(x=mean_condition_00, color='grey', linestyle='-', label='0-0 mean')\n",
-    "\n",
-    "    # # Determine if distributions are Gaussian based on normality tests\n",
-    "    # data1, data2, data3 = cvs_condition_10, cvs_condition_11,  cvs_condition_00\n",
-    "    # is_data1_gaussian = stats.normaltest(data1).pvalue > 0.05\n",
-    "    # is_data2_gaussian = stats.normaltest(data2).pvalue > 0.05\n",
-    "    # is_data3_gaussian = stats.normaltest(data3).pvalue > 0.05\n",
-    "\n",
-    "    # # Perform appropriate statistical test based on distribution\n",
-    "    # if is_data1_gaussian and is_data2_gaussian:\n",
-    "    #     test_statistic, p_value = stats.ttest_ind(data1, data2)\n",
-    "    #     test_name = \"t-Test\"\n",
-    "    # else:\n",
-    "    #     # Perform Mann-Whitney U test (non-parametric)\n",
-    "    #     test_statistic, p_value = stats.mannwhitneyu(data1, data2, alternative='two-sided')\n",
-    "    #     test_name = \"Mann-Whitney U Test\"\n",
-    "\n",
-    "    axs[-1].set_xlabel('CVS')\n",
-    "    axs[-1].set_ylabel('Frequency')\n",
-    "    axs[-1].set_title(\"Histogram\")\n",
-    "    # if p_value<0.05: axs[-1].set_title(f'{test_name} P-Value: {p_value}')\n",
-    "    # else: axs[-1].set_title(\"Histogram\")\n",
-    "    axs[-1].legend(loc='upper left', bbox_to_anchor=(1, 1))\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "            scores_10.append(sum(thresholded_cvs_condition_10[threshold]))\n",
+    "            scores_11.append(sum(thresholded_cvs_condition_11[threshold]))\n",
+    "            scores_00.append(sum(thresholded_cvs_condition_00[threshold]))\n",
     "\n",
     "    print(len(outcome), len(scores_00), len(scores_10), len(scores_11))\n",
     "\n",
@@ -284,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_features.to_excel(main_folder + \"pred_features_conn_type.xlsx\")"
+    "pred_features.to_excel(main_folder + \"pred_features_conn_type_1sigma.xlsx\")"
    ]
   },
   {
@@ -300,10 +433,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
     "\n",
     "connection_type = \"Norm_00\"\n",
+    "\n",
+    "def stat_test(x, y):\n",
+    "    # Mann Whitney U test if x and y not Gaussian, Ind t-Test if x and y Gaussian\n",
+    "    test = \"\"\n",
+    "    _, px = shapiro(x)\n",
+    "    _, py = shapiro(y)\n",
+    "\n",
+    "    pvalue = 1\n",
+    "    if px > 0.05 or py > 0.05: _, pvalue = mannwhitneyu(x, y, alternative='two-sided'); test = \"Mann Whitney U\"\n",
+    "    elif px <= 0.05 and py <= 0.05: _, pvalue = ttest_ind(x, y, equal_var = False); test = \"Ind t-Test\"\n",
+    "\n",
+    "    return test, pvalue\n",
+    "\n",
     "\n",
     "def to_labels(pos_probs, threshold):\n",
     "    # function to map all values >=threshold to 1 and all values <threshold to 0\n",
@@ -313,7 +458,6 @@
     "\n",
     "def moving_thresh_auc(predictive_measure=[], outcome=[], n_good=14, n_bad=7, moving_step=0.0001):\n",
     "    # returns AUC, best threshold, true negatives and true positives at the best threshold\n",
-    "\n",
     "    thresholds = np.arange(0, np.max(predictive_measure), moving_step)\n",
     "\n",
     "    g = np.array([pm for i,pm in enumerate(predictive_measure) if outcome[i]==\"good\"])\n",
@@ -336,8 +480,6 @@
     "        elif A==A_top: step+=moving_step\n",
     "\n",
     "    return (A_top, T, tn_top, tp_top)\n",
-    "\n",
-    "from scipy.stats import shapiro, mannwhitneyu, ttest_ind\n",
     "\n",
     "data = pd.read_excel(main_folder+\"pred_features_conn_type.xlsx\", engine='openpyxl')\n",
     "\n",
@@ -362,24 +504,6 @@
     "print(\"TN = %.2f\" % mauc[0])\n",
     "print(\"TP = %.2f\" % mauc[0])\n",
     "print(\"P-value = %.4f\" % pvalue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def stat_test(x, y):\n",
-    "    test = \"\"\n",
-    "    _, px = shapiro(x)\n",
-    "    _, py = shapiro(y)\n",
-    "\n",
-    "    pvalue = 1\n",
-    "    if px > 0.05 or py > 0.05: _, pvalue = mannwhitneyu(x, y, alternative='two-sided'); test = \"Mann Whitney U\"\n",
-    "    elif px <= 0.05 and py <= 0.05: _, pvalue = ttest_ind(x, y, equal_var = False); test = \"Ind t-Test\"\n",
-    "\n",
-    "    return test, pvalue"
    ]
   },
   {
