--- a/notebooks/cvs_histogram.ipynb
+++ b/notebooks/cvs_histogram.ipynb
@@ -1325,7 +1325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Below is an old approach; kept for now"
+    "44-EpiGAME"
    ]
   },
   {
@@ -1334,84 +1334,184 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the threshold as mean + N * std\n",
-    "N = 1\n",
+    "import math\n",
+    "from scipy import stats\n",
     "\n",
-    "threshold = data['Score'].mean() + N * data['Score'].std()\n",
+    "# Set a specific random seed (e.g., 42 for reproducibility)\n",
+    "random_seed = 42\n",
+    "np.random.seed(random_seed)\n",
     "\n",
-    "# Get the groups with scores above the threshold\n",
-    "groups_above_threshold = data[data['Score'] > threshold]['Group']\n",
+    "print(measure)\n",
     "\n",
-    "print(\"Groups with Mean Scores Above Threshold:\", (len(groups_above_threshold)))"
+    "for sub in subs:\n",
+    "\n",
+    "    print(f\"Subject: {sub}\")\n",
+    "    df_sub = df[df['Subject'] == sub]\n",
+    "\n",
+    "    r = 0.1\n",
+    "    group_size = 1\n",
+    "    if len(RESECTION[sub])>1:\n",
+    "        group_size = int(len(NODES[str(sub)])*r) if int(len(NODES[str(sub)])*r) < len(RESECTION[sub]) else len(RESECTION[sub])-1\n",
+    "    print(group_size, int(len(NODES[str(sub)])*r) < len(RESECTION[sub]))\n",
+    "\n",
+    "    groups, nodes, mean_cvs = [],[],[]\n",
+    "\n",
+    "    for i in range(100):\n",
+    "\n",
+    "        group_labels = list(np.random.choice(NODES[str(sub)], size=group_size, replace=False))\n",
+    "\n",
+    "        for node in NODES[str(sub)]:\n",
+    "            if node not in group_labels:\n",
+    "            # print(\"Analyzing Connectivity of Node:\", node)\n",
+    "            # Split the Labels column into two nodes using '<->'\n",
+    "                split_labels = df_sub['Labels'].str.split('<->', expand=True)\n",
+    "\n",
+    "                # Check if one node is the node and the other is in group_labels\n",
+    "                relevant_rows = df_sub[((split_labels[0] == node) & split_labels[1].isin(group_labels)) |\n",
+    "                                ((split_labels[1] == node) & split_labels[0].isin(group_labels))]\n",
+    "\n",
+    "                # Calculate mean CVS values\n",
+    "                mean_cvs.append(list(relevant_rows['CVS'].apply(lambda x: MM(list(map(float, x.strip('[]').split()))))))\n",
+    "                groups.append(group_labels)\n",
+    "                nodes.append(node)\n",
+    "\n",
+    "    data = {\n",
+    "        'Node': nodes,\n",
+    "        'Group': groups,\n",
+    "        'Score': [np.mean(x) for x in mean_cvs]}\n",
+    "\n",
+    "    data = pd.DataFrame(data)\n",
+    "\n",
+    "    # Count rows with NaN values\n",
+    "    nan_rows_count = data.isna().sum().sum()\n",
+    "    print(\"Number of Rows with NaN Values:\", nan_rows_count)\n",
+    "    # Drop NaN rows\n",
+    "    data = data.dropna()\n",
+    "\n",
+    "    plot_scores_hist(data)\n",
+    "\n",
+    "    # Merge the 'Node' and 'Group' columns to create 'Group_full'\n",
+    "    data['Group_full'] = data.apply(lambda row: [row['Node']] + row['Group'], axis=1)\n",
+    "\n",
+    "    # Sample resection list of nodes\n",
+    "    resection_nodes = RESECTION[sub]\n",
+    "    print(f\"Resection: {len(resection_nodes)} nodes\")\n",
+    "\n",
+    "    # Find the common nodes (overlap)\n",
+    "    data['Overlap_with_Resection'] = data['Group_full'].apply(lambda row: compute_overlap(row, resection_nodes))\n",
+    "\n",
+    "    # Apply the function to each row\n",
+    "    data['Overlap_Percentage'] = data['Group_full'].apply(lambda row: compute_overlap_percentage(row, resection_nodes))\n",
+    "\n",
+    "    # Calculate the median and standard deviation of 'Score'\n",
+    "    median_score = data['Score'].median()\n",
+    "    std_dev_score = data['Score'].std()\n",
+    "\n",
+    "    # Define the number of standard deviations to consider\n",
+    "    num_std_devs = 7\n",
+    "    # Create score ranges relative to median and standard deviation\n",
+    "    score_ranges = []\n",
+    "    min_std, max_std = num_std_devs, -num_std_devs\n",
+    "    # Create an array of x-values with an offset\n",
+    "    x_values = []\n",
+    "\n",
+    "    for i in range(-num_std_devs, num_std_devs):\n",
+    "        range_start = median_score + i * std_dev_score\n",
+    "        range_end = median_score + (i + 1) * std_dev_score\n",
+    "\n",
+    "        # Check if there are score values in the range, and only add the range if there are values\n",
+    "        if any((range_start <= data['Score']) & (data['Score'] < range_end)):\n",
+    "            score_ranges.append((range_start, range_end))\n",
+    "            min_std = min(min_std, i)\n",
+    "            max_std = max(max_std, i)\n",
+    "            x_values.append(i+0.5)\n",
+    "\n",
+    "    # Initialize lists\n",
+    "    overlap_percentages = []\n",
+    "    best_score_range = None\n",
+    "    best_overlap_percentage = 0.0\n",
+    "    all_group_overlaps = []\n",
+    "\n",
+    "    for score_range in score_ranges:\n",
+    "\n",
+    "        group_overlaps = []\n",
+    "        lower_bound = score_range[0]\n",
+    "        upper_bound = score_range[1]\n",
+    "\n",
+    "        overlap_percentage = data[(data['Score'] >= lower_bound) & (data['Score'] < upper_bound)]['Overlap_Percentage'].mean()\n",
+    "        overlap_percentages.append(overlap_percentage)\n",
+    "\n",
+    "        if overlap_percentage > best_overlap_percentage:\n",
+    "            best_overlap_percentage = overlap_percentage\n",
+    "            best_score_range = score_range\n",
+    "\n",
+    "        # Filter groups within the current score range\n",
+    "        filtered_groups = data[(data['Score'] >= lower_bound) & (data['Score'] < upper_bound)]\n",
+    "\n",
+    "        # Calculate overlap scores and create a new \"Group_Overlap\" column\n",
+    "        data['Group_Overlap'] = 0  # Initialize the column with zeros\n",
+    "\n",
+    "        # Compute the overlap between the filtered groups\n",
+    "        group_overlap_scores = []\n",
+    "\n",
+    "        for i, group1 in filtered_groups.iterrows():\n",
+    "            group_overlap_score = 0\n",
+    "\n",
+    "            for j, group2 in filtered_groups.iterrows():\n",
+    "\n",
+    "                if group1['Group_full'] != group2['Group_full']:\n",
+    "                    # You can define a metric to calculate the overlap between groups here\n",
+    "                    overlap = compute_overlap_percentage(group1['Group_full'], group2['Group_full'])\n",
+    "                    group_overlap_scores.append(overlap)\n",
+    "\n",
+    "            # Add group_overlap_score to the \"Group_Overlap\" column\n",
+    "            data.at[i, 'Group_full'] = np.mean(group_overlap_scores)\n",
+    "            group_overlaps.append(np.mean(group_overlap_scores)) # save the mean overlap of group1\n",
+    "\n",
+    "        all_group_overlaps.append(group_overlaps)\n",
+    "\n",
+    "    print(\"Best Score Range for Overlapping Groups:\", best_score_range)\n",
+    "    print(\"Best Overlap:\", best_overlap_percentage)\n",
+    "    print(f\"Which is: {best_overlap_percentage*(group_size+1):.2f}/{group_size+1} nodes\")\n",
+    "\n",
+    "    # Plot overlap percentages across score ranges\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.boxplot(all_group_overlaps, labels=x_values, positions=x_values, showfliers=True)\n",
+    "    plt.ylabel('Group Overlap')\n",
+    "    plt.xlabel('Score Distribution Intervals')\n",
+    "    plt.title('Group Overlap Across Score Ranges')\n",
+    "\n",
+    "    # Set custom x-axis ticks at points between the ranges\n",
+    "    plt.xticks(x_values)\n",
+    "    # Add vertical lines for median and each standard deviation\n",
+    "    borders = x_values+[x_values[-1]+1]\n",
+    "    for k in [int(x-0.5) for x in borders]:\n",
+    "        label = 'Median' if k == 0 else f'{k}σ'\n",
+    "        plt.axvline(x=k, color='gray', linestyle='--', linewidth=0.5)\n",
+    "        plt.text(k, plt.ylim()[0], label, horizontalalignment='right')\n",
+    "\n",
+    "    plt.xticks([])  # Remove x-axis ticks\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Perform statistical tests for all pairwise comparisons\n",
+    "    for i in range(len(x_values)):\n",
+    "        for j in range(i + 1, len(x_values)):\n",
+    "            range1_overlaps = all_group_overlaps[i]\n",
+    "            range2_overlaps = all_group_overlaps[j]\n",
+    "\n",
+    "            # Check if the distribution is normal (you can use other methods)\n",
+    "            if stats.shapiro(range1_overlaps)[1] > 0.05 and stats.shapiro(range2_overlaps)[1] > 0.05:\n",
+    "                # Perform Student's t-test for normal distributions\n",
+    "                t_stat, p_value = stats.ttest_ind(range1_overlaps, range2_overlaps)\n",
+    "            else:\n",
+    "                # Perform Mann-Whitney U test for non-normal distributions\n",
+    "                u_stat, p_value = stats.mannwhitneyu(range1_overlaps, range2_overlaps)\n",
+    "\n",
+    "            # Print the results\n",
+    "            print(f'Comparison between range {x_values[i]} and range {x_values[j]}:')\n",
+    "            print(f'p-value: {p_value}')\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the minimum required overlap (e.g., 50% of the resection list)\n",
-    "min_overlap = len(RESECTION[sub])*0.2\n",
-    "\n",
-    "# Filter the groups_above_threshold that meet the minimum overlap condition\n",
-    "overlap_groups_with_min_overlap = [group for group in groups_above_threshold if sum(1 for label in RESECTION[sub] if label in group) >= min_overlap]\n",
-    "print(\"Groups with min_overlap with resection:\", len(overlap_groups_with_min_overlap))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the scores for the groups with at least min_overlap from the original DataFrame (data)\n",
-    "scores_for_overlap_groups = data[data['Group'].apply(lambda x: x in overlap_groups_with_min_overlap)]['Score']\n",
-    "print(scores_for_overlap_groups)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the original histogram\n",
-    "plt.hist(data['Score'], bins=20, edgecolor='black', alpha=0.7, label='Score')\n",
-    "plt.xlabel('Score')\n",
-    "plt.ylabel('Frequency')\n",
-    "\n",
-    "# Mark the scores for the groups with at least min_overlap\n",
-    "for score in scores_for_overlap_groups:\n",
-    "    plt.axvline(score, color='r', linestyle='dashed', linewidth=2)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print out nodes from the resection list that are present in overlap_groups_with_min_overlap\n",
-    "nodes_in_overlap = []\n",
-    "\n",
-    "for node in RESECTION[sub]:\n",
-    "    if any(node in group for group in overlap_groups_with_min_overlap):\n",
-    "        nodes_in_overlap.append(node)\n",
-    "\n",
-    "print(\"Nodes from Resection List Present in Overlap Groups:\")\n",
-    "print(nodes_in_overlap)\n",
-    "print(len(nodes_in_overlap))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
