--- a/notebooks/cvs_histogram.ipynb
+++ b/notebooks/cvs_histogram.ipynb
@@ -1356,24 +1356,23 @@
     "\n",
     "    groups, nodes, mean_cvs = [],[],[]\n",
     "\n",
-    "    for i in range(100):\n",
-    "\n",
-    "        group_labels = list(np.random.choice(NODES[str(sub)], size=group_size, replace=False))\n",
-    "\n",
+    "    for i in range(5):\n",
+    "        \n",
     "        for node in NODES[str(sub)]:\n",
-    "            if node not in group_labels:\n",
+    "\n",
+    "            group_labels = list(np.random.choice([n for n in NODES[str(sub)] if n!=node], size=group_size, replace=False))\n",
     "            # print(\"Analyzing Connectivity of Node:\", node)\n",
     "            # Split the Labels column into two nodes using '<->'\n",
-    "                split_labels = df_sub['Labels'].str.split('<->', expand=True)\n",
+    "            split_labels = df_sub['Labels'].str.split('<->', expand=True)\n",
     "\n",
-    "                # Check if one node is the node and the other is in group_labels\n",
-    "                relevant_rows = df_sub[((split_labels[0] == node) & split_labels[1].isin(group_labels)) |\n",
-    "                                ((split_labels[1] == node) & split_labels[0].isin(group_labels))]\n",
+    "            # Check if one node is the node and the other is in group_labels\n",
+    "            relevant_rows = df_sub[((split_labels[0] == node) & split_labels[1].isin(group_labels)) |\n",
+    "                            ((split_labels[1] == node) & split_labels[0].isin(group_labels))]\n",
     "\n",
-    "                # Calculate mean CVS values\n",
-    "                mean_cvs.append(list(relevant_rows['CVS'].apply(lambda x: MM(list(map(float, x.strip('[]').split()))))))\n",
-    "                groups.append(group_labels)\n",
-    "                nodes.append(node)\n",
+    "            # Calculate mean CVS values\n",
+    "            mean_cvs.append(list(relevant_rows['CVS'].apply(lambda x: MM(list(map(float, x.strip('[]').split()))))))\n",
+    "            groups.append(group_labels)\n",
+    "            nodes.append(node)\n",
     "\n",
     "    data = {\n",
     "        'Node': nodes,\n",
@@ -1461,12 +1460,13 @@
     "\n",
     "                if group1['Group_full'] != group2['Group_full']:\n",
     "                    # You can define a metric to calculate the overlap between groups here\n",
-    "                    overlap = compute_overlap_percentage(group1['Group_full'], group2['Group_full'])\n",
-    "                    group_overlap_scores.append(overlap)\n",
+    "                    group_overlap = compute_overlap(group1['Group_full'], group2['Group_full'])\n",
+    "                    resection_overlap = compute_overlap_percentage(group_overlap, resection_nodes) if group_overlap else 0\n",
+    "                    group_overlap_scores.append(resection_overlap)\n",
     "\n",
     "            # Add group_overlap_score to the \"Group_Overlap\" column\n",
-    "            data.at[i, 'Group_full'] = np.mean(group_overlap_scores)\n",
-    "            group_overlaps.append(np.mean(group_overlap_scores)) # save the mean overlap of group1\n",
+    "            data.at[i, 'Group_full'] = group_overlap_scores\n",
+    "            group_overlaps += group_overlap_scores # save the mean overlap of group1\n",
     "\n",
     "        all_group_overlaps.append(group_overlaps)\n",
     "\n",
@@ -1493,24 +1493,24 @@
     "    plt.xticks([])  # Remove x-axis ticks\n",
     "    plt.show()\n",
     "\n",
-    "    # Perform statistical tests for all pairwise comparisons\n",
-    "    for i in range(len(x_values)):\n",
-    "        for j in range(i + 1, len(x_values)):\n",
-    "            range1_overlaps = all_group_overlaps[i]\n",
-    "            range2_overlaps = all_group_overlaps[j]\n",
+    "    # # Perform statistical tests for all pairwise comparisons\n",
+    "    # for i in range(len(x_values)):\n",
+    "    #     for j in range(i + 1, len(x_values)):\n",
+    "    #         range1_overlaps = all_group_overlaps[i]\n",
+    "    #         range2_overlaps = all_group_overlaps[j]\n",
     "\n",
-    "            # Check if the distribution is normal (you can use other methods)\n",
-    "            if stats.shapiro(range1_overlaps)[1] > 0.05 and stats.shapiro(range2_overlaps)[1] > 0.05:\n",
-    "                # Perform Student's t-test for normal distributions\n",
-    "                t_stat, p_value = stats.ttest_ind(range1_overlaps, range2_overlaps)\n",
-    "            else:\n",
-    "                # Perform Mann-Whitney U test for non-normal distributions\n",
-    "                u_stat, p_value = stats.mannwhitneyu(range1_overlaps, range2_overlaps)\n",
+    "    #         # Check if the distribution is normal (you can use other methods)\n",
+    "    #         if len(range1_overlaps)>=3 and len(range2_overlaps)>=3:\n",
+    "    #           if stats.shapiro(range1_overlaps)[1] > 0.05 and stats.shapiro(range2_overlaps)[1] > 0.05:\n",
+    "    #               # Perform Student's t-test for normal distributions\n",
+    "    #               t_stat, p_value = stats.ttest_ind(range1_overlaps, range2_overlaps)\n",
+    "    #           else:\n",
+    "    #               # Perform Mann-Whitney U test for non-normal distributions\n",
+    "    #               u_stat, p_value = stats.mannwhitneyu(range1_overlaps, range2_overlaps)\n",
     "\n",
-    "            # Print the results\n",
-    "            print(f'Comparison between range {x_values[i]} and range {x_values[j]}:')\n",
-    "            print(f'p-value: {p_value}')\n",
-    "\n"
+    "    #           # Print the results\n",
+    "    #           print(f'Comparison between range {x_values[i]} and range {x_values[j]}:')\n",
+    "    #           print(f'p-value: {p_value}')"
    ]
   }
  ],
